--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,9 @@
-include: package:flutter_lints/flutter.yaml
+include: package:very_good_analysis/analysis_options.yaml
+analyzer:
+  language:
+    strict-casts: false
+    strict-inference: false
+
+linter:
+  rules:
+    public_member_api_docs: false
