--- a/features/presentation/pubspec.yaml
+++ b/features/presentation/pubspec.yaml
@@ -7,16 +7,17 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
   bloc: ^8.1.2
-  get_it: ^7.6.4
-  equatable: ^2.0.5
-  flutter_bloc: ^8.1.3
   domain:
     path: ../domain
+  equatable: ^2.0.5
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
   
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  very_good_analysis: ^5.1.0
