--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,17 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
   core:
     path: features/core
+  flutter:
+    sdk: flutter
   presentation:
     path: features/presentation
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  very_good_analysis: ^5.1.0
 
 flutter:
   uses-material-design: true
