--- a/features/presentation/pubspec.yaml
+++ b/features/presentation/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
+  meta: ^1.9.1
   
 dev_dependencies:
   flutter_lints: ^2.0.0
