--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,3 +7,6 @@ analyzer:
 linter:
   rules:
     public_member_api_docs: false
+    avoid_dynamic_calls: false
+    one_member_abstracts: false
+    lines_longer_than_80_chars: false``
