--- a/features/core/pubspec.yaml
+++ b/features/core/pubspec.yaml
@@ -9,11 +9,18 @@ environment:
 dependencies:
   data: 
     path: ../data
+  dio: ^5.3.2
   domain:
     path: ../domain
+  flutter:
+    sdk: flutter
+  flutter_secure_storage: ^9.0.0
   get_it: ^7.6.4
+  hive: ^2.2.3
+  path_provider: ^2.1.1
   presentation:
     path: ../presentation
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
