--- a/features/data/pubspec.yaml
+++ b/features/data/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   domain: 
     path: ../domain
   equatable: ^2.0.5
+  flutter_secure_storage: ^9.0.0
+  hive: ^2.2.3
+  
 dev_dependencies:
   flutter_lints: ^2.0.0
   very_good_analysis: ^5.1.0
