--- a/features/presentation/analysis_options.yaml
+++ b/features/presentation/analysis_options.yaml
@@ -9,3 +9,4 @@ linter:
     public_member_api_docs: false
     avoid_dynamic_calls: false
     one_member_abstracts: false
+    lines_longer_than_80_chars: false
