--- a/features/data/analysis_options.yaml
+++ b/features/data/analysis_options.yaml
@@ -10,3 +10,4 @@ linter:
     avoid_dynamic_calls: false
     one_member_abstracts: false
     lines_longer_than_80_chars: false
+    avoid_positional_boolean_parameters: false
