added src folder to projects

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,3 +11,4 @@ linter:
     one_member_abstracts: false
     lines_longer_than_80_chars: false
     avoid_positional_boolean_parameters: false
+    implementation_imports: false
