--- a/dependencies/service_locator/pubspec.yaml
+++ b/dependencies/service_locator/pubspec.yaml
@@ -1,4 +1,4 @@
-name: domain
+name: service_locator
 publish_to: 'none'
 version: 1.0.0
 
@@ -6,7 +6,7 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
-  equatable: ^2.0.5
+  get_it: ^7.6.4
 
 dev_dependencies:
   very_good_analysis: ^5.1.0
