--- a/features/data/pubspec.yaml
+++ b/features/data/pubspec.yaml
@@ -1,5 +1,4 @@
 name: data
-description: A starting point for Dart libraries or applications.
 publish_to: 'none'
 version: 1.0.0
 
@@ -13,7 +12,11 @@ dependencies:
   equatable: ^2.0.5
   flutter_secure_storage: ^9.0.0
   hive: ^2.2.3
+  rest_data_source_adapter:
+    path: ../../dependencies/data_source_adapters/rest_data_source_adapter
+  secure_local_storage_data_source_adapter:
+    path: ../../dependencies/data_source_adapters/secure_local_storage_data_source_adapter
+
   
 dev_dependencies:
-  flutter_lints: ^2.0.0
   very_good_analysis: ^5.1.0
