--- a/features/presentation/pubspec.yaml
+++ b/features/presentation/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   meta: ^1.9.1
+  service_locator:
+    path: ../../dependencies/service_locator
   
 dev_dependencies:
   flutter_test:
