--- a/dependencies/core/pubspec.yaml
+++ b/dependencies/core/pubspec.yaml
@@ -5,5 +5,8 @@ version: 1.0.0
 environment:
   sdk: '>=3.0.6 <4.0.0'
 
+dependencies:
+  intl: ^0.18.1
+
 dev_dependencies:
   very_good_analysis: ^5.1.0
