--- a/features/authentication/pubspec.yaml
+++ b/features/authentication/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
     path: ../../dependencies/data_source_adapters/secure_local_storage_data_source_adapter
   service_locator:
     path: ../../dependencies/service_locator
+  usecases:
+    path: ../../usecases
 
 dev_dependencies:
   very_good_analysis: ^5.1.0
