--- a/dependencies/data_source_adapters/rest_data_source_adapter/pubspec.yaml
+++ b/dependencies/data_source_adapters/rest_data_source_adapter/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 
 dependencies:
   dio: ^5.3.2
+  secure_local_storage_data_source_adapter:
+    path: ../secure_local_storage_data_source_adapter
 
 dev_dependencies:
   very_good_analysis: ^5.1.0
