--- a/application/domain/authentication_domain/pubspec.yaml
+++ b/application/domain/authentication_domain/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   core:
-    path: ../../../dependencies/core
+    path: ../core
   equatable: ^2.0.5
 
 dev_dependencies:
