--- a/application/presentation/authentication_module/pubspec.yaml
+++ b/application/presentation/authentication_module/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
     path: ../../domain/authentication_domain
   bloc: ^8.1.2
   core:
-    path: ../../../dependencies/core
+    path: ../../domain/core
   equatable: ^2.0.5
   flutter:
     sdk: flutter
