--- a/application/data/user_repository/pubspec.yaml
+++ b/application/data/user_repository/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   core:
-    path: ../../../dependencies/core
+    path: ../../domain/core
   equatable: ^2.0.5
   rest_data_source_adapter:
     path: ../../../dependencies/data_source_adapters/rest_data_source_adapter
