--- a/application/data/authentication_repository/pubspec.yaml
+++ b/application/data/authentication_repository/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies:
   authentication_domain:
     path: ../../domain/authentication_domain
-  core:
-    path: ../../domain/core
+  core_domain:
+    path: ../../domain/core_domain
   equatable: ^2.0.5
   rest_data_source_adapter:
     path: ../../../dependencies/data_source_adapters/rest_data_source_adapter
