--- a/application/data/user_repository/pubspec.yaml
+++ b/application/data/user_repository/pubspec.yaml
@@ -6,8 +6,8 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
-  core:
-    path: ../../domain/core
+  core_domain:
+    path: ../../domain/core_domain
   equatable: ^2.0.5
   rest_data_source_adapter:
     path: ../../../dependencies/data_source_adapters/rest_data_source_adapter
