--- a/application/domain/core_domain/pubspec.yaml
+++ b/application/domain/core_domain/pubspec.yaml
@@ -1,4 +1,4 @@
-name: core
+name: core_domain
 publish_to: 'none'
 version: 1.0.0
 
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   equatable: ^2.0.5
-  intl: ^0.18.1
+  intl: ^0.19.0
 
 dev_dependencies:
   very_good_analysis: ^5.1.0
