--- a/application/presentation/authentication_module/pubspec.yaml
+++ b/application/presentation/authentication_module/pubspec.yaml
@@ -9,8 +9,8 @@ dependencies:
   authentication_domain:
     path: ../../domain/authentication_domain
   bloc: ^8.1.2
-  core:
-    path: ../../domain/core
+  core_domain:
+    path: ../../domain/core_domain
   equatable: ^2.0.5
   flutter:
     sdk: flutter
