--- a/application/presentation/home_module/pubspec.yaml
+++ b/application/presentation/home_module/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   authentication_module:
     path: ../authentication_module
   bloc: ^8.1.2
-  core:
-    path: ../../domain/core
+  core_domain:
+    path: ../../domain/core_domain
   equatable: ^2.0.5
   flutter:
     sdk: flutter
